Fix some issues related to overflow : hidden & Increase the items of the owl-carousle of products, clients and partners

--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -2116,6 +2116,7 @@ section {
   transition: all 0.3s ease;
   z-index: 10;
   flex-wrap: wrap;
+  overflow: hidden;
   /* Ensure it's above the other circles */
 }
 
@@ -3760,7 +3761,7 @@ section {
 
 .photo-card {
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
